# checkout-ruff

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  ruff.toml
checkout_ruff/: __main__.py  hello_world.py
tests/: test_hello_world.py
